Improve performance by avoiding string in the instrumentation.